# showcase-app

./: .gitignore  README.md
orm/: CMakeLists.txt
orm-cpp/: README.md
orm-cpp/orm/core/: mapper.h  property.cpp  property.h  scalar.cpp  token.h
orm-cpp/orm/database/: database.h
orm-cpp/orm/database_mark/: database.cpp
orm-cpp/orm/memory_mark/: record.cpp
orm-cpp/orm/store/: factory.h
orm-cpp/orm/store_mark/: store.cpp  store.h
orm-cpp/orm/store_test/: person.cpp  person.h
orm/orm/core/: entity.h  property.cpp  property.h
orm/orm/database/: database.h
orm/orm/database_mark/: database.cpp
orm/orm/database_test/: CMakeLists.txt  database_test.cpp
orm/orm/store/: store.h
orm/orm/store_test/: store_interface_test.cpp
orm/orm/test_mock/: main.cpp
orm/orm/test_mock/store_mock/orm/store_mark/: store.cpp
sketch-orm/: CMakeLists.txt
sketch-orm/orm/core/: coder.h  mapper.h  property.cpp  property.h  scalar.cpp  scalar.h  types.h
sketch-orm/orm/database_mark/: database.h
sketch-orm/orm/database_test/: CMakeLists.txt  database_test.cpp
sketch-orm/orm/memory/: data.cpp  data.h  record.h
sketch-orm/orm/memory_mark/: record.h
sketch-orm/orm/store/: store.h
sketch-orm/orm/store_mark/: factory.cpp  factory.h
sketch-orm/orm/store_test/: CMakeLists.txt  store_interface_test.cpp  store_test.cpp
sketch-orm/orm/test_mock/store_mock/orm/store_mark/: store.cpp  store.h  store_mock.h
typeahead-golang/: README.md
typeahead-golang/api/: api.yaml
typeahead-golang/app/: go.mod  go.sum
typeahead-golang/docker/: Dockerfile
(+29 files in other folders)
